# tbot_random_book

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
tbot_random_book/: book.py  bot.py
tbot_random_book/scripts/: cli.py
tests/: test_book.py
