[tool.poetry]
name = "tbot-random-book"
version = "0.1.0"
description = ""
authors = ["Vadim Gusak <gusakvd@gmail.com>"]
readme = "README.md"
packages = [{include = "tbot_random_book"}]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.9.0"
python-dotenv = "^0.21.0"
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pook = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "tbot_random_book.scripts.cli:main"